Basic ugly GUI with functionality

--- a/src/main/resources/assets/economy/lang/en_us.json
+++ b/src/main/resources/assets/economy/lang/en_us.json
@@ -3,5 +3,6 @@
 	"item.economy.silver_coins": "Silver Coins",
 	"item.economy.copper_coins": "Copper Coins",
 	"item.economy.bank_chest": "Bank Chest",
-	"block.economy.bank_chest": "Bank Chest"
+	"block.economy.bank_chest": "Bank Chest",
+	"itemGroup.economy.economy_group": "Economy"
 }
